Added ControllerFactory Sample of Boolean Control, Small refactoring of ShapeBaseSample and FXSample: updated NewBezier to reflect changes Reduced a few redundant calls